--- a/index.html
+++ b/index.html
@@ -2,28 +2,19 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content=
-"width=device-width, initial-
-scale=1.0">
-<!--
-Подключаем файл стилей -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Одностраничный сайт</title>
-<link rel="stylesheet" href="styles.css"> </head>
+<link rel="stylesheet" href="styles.css"> <!--Подключаем файл стилей -->
+</head>
 <body>
 </body>
   </html>
   <nav>
 <ul>
-<li><a href="#home" class="nav-
-link">Главная</a></li>
-<li><a href="#about" class="nav-link">Обо
-мне</a></li>
-<li><a href="#skills" class="nav-
-link">Навыки</a></li>
-<li><a href="#image" class=
-"
-nav-
-link">Изображение</a></li>
+<li><a href="#home" class="nav-link">Главная</a></li>
+<li><a href="#about" class="nav-link">Обо мне</a></li>
+<li><a href="#skills" class="nav-link">Навыки</a></li>
+<li><a href="#image" class="nav-link">Изображение</a></li>
 </ul>
 </nav>
   <div id="home" class="section active">
